networkpolicies.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-same-namespace
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector: {}

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-pod-and-namespace-both
spec:
  podSelector:
    matchLabels:
      app: cups4j-cups-client
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            project: test
        podSelector:
          matchLabels:
            app: cups4j-cups-client
